Prevent zoom on mobile button double clicks

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
   padding: 1.25rem;
+  touch-action: manipulation;
 }
 
 #drums {
